Metas are no longer a thing.

--- a/src/dashboard/packs.component.html
+++ b/src/dashboard/packs.component.html
@@ -16,18 +16,11 @@
         not the document is valid.
       </li>
       <li>
-        Meta. This is an programmatic adjunct to the mode, which helps the mode
-        customize its behavior. Schemas do not contain all the information
-        that end-users care about. For instance, in a TEI schema, a "p"
-        element should typically be rendered as a block, whereas a "hi"
-        element should be represented inline. This information is not part of
-        the schema and must be represented elsewhere. The meta takes care of
-        this.
-      </li>
-      <li>
-        Metadata. The metadata performs a task similar to the meta but,
-        whereas the meta operates dynamically, metadata is static. An example
-        of metadata is documentation extracted from a schema.
+        Metadata. Schemas do not contain all the information that end-users care
+        about. For instance, in a TEI schema, a "p" element should typically be
+        rendered as a block, whereas a "hi" element should be represented
+        inline. This information is not part of the schema and must be
+        represented elsewhere. The metadata takes care of this.
       </li>
     </ul>
   </div>
