Fix improper use of trackBy.
We have to call a function!

--- a/src/dashboard/schemas.component.html
+++ b/src/dashboard/schemas.component.html
@@ -13,7 +13,7 @@
         <th>Uploaded</th>
         <th>Downloaded</th>
       </tr>
-      <tr *ngFor="let record of records; let $last = last; trackBy: record?.name" [class.last]="$last" [attr.data-record-name]="record.name" (click)="showDetails(record, $event)">
+      <tr *ngFor="let record of records; let $last = last; trackBy: trackByName" [class.last]="$last" [attr.data-record-name]="record.name" (click)="showDetails(record, $event)">
         <td class="buttons">
           <button class="btn btn-default delete-button"
                   (click)="del(record)"
