--- a/src/dashboard/xml-files.component.html
+++ b/src/dashboard/xml-files.component.html
@@ -16,7 +16,7 @@
         <th>Uploaded</th>
         <th>Downloaded</th>
       </tr>
-      <tr *ngFor="let record of records; let $last = last; trackBy: record?.name" [class.last]="$last" [attr.data-record-name]="record.name" (click)="showDetails(record, $event)">
+      <tr *ngFor="let record of records; let $last = last; trackBy: trackByName" [class.last]="$last" [attr.data-record-name]="record.name" (click)="showDetails(record, $event)">
         <td class="buttons">
           <button class="btn btn-default edit-button"
              [attr.disabled]="getEditingData(record).editingDisabled() | async"
