--- a/src/dashboard/xml-files/xml-files.component.html
+++ b/src/dashboard/xml-files/xml-files.component.html
@@ -19,9 +19,9 @@
       <tr *ngFor="let record of records; let $last = last; trackBy: trackByName" [class.last]="$last" [attr.data-record-name]="record.name" (click)="showDetails(record, $event)">
         <td class="buttons">
           <button class="btn btn-default edit-button"
-             [attr.disabled]="getEditingData(record).editingDisabled() | async"
+             [attr.disabled]="getEditingData(record).editingDisabled | async"
              (click)="edit(record)"
-             [attr.title]="getEditingData(record).editButtonTitle() | async">
+             [attr.title]="getEditingData(record).editButtonTitle | async">
             <i class="fa fa-edit"></i>
           </button>
           <button class="btn btn-default delete-button"
